syntax = "proto3";
package ClienteName;

message Message {
  string body = 1;
}

service NameService {
  rpc SolicitudCliente(Message) returns (Message) {}
}